Fix margin-right for ::first-letter. b=60289 r=rbs sr=dbaron